--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
         h1 { color: navy; }
         table td { padding: 10px; }
         .buttons input { width: 100%; }
+        #pprh { background-image: url(res/path8.png); background-size: contain; background-repeat: no-repeat; background-position: left center; padding-left: 50px; }
     </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Paypal Rechner</h1>
+        <h1 id="pprh">Paypal Rechner</h1>
         <p>
             <i>
                 Dieses Tool berechnet, wie viel man bei PayPal mehr zahlen muss,
